# CPO

./: .env.cashflow.example  .env.example  .gitignore  Dockerfile  Dockerfile.cashflow  QUICKSTART.md  README.md  VISION.md  config.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: bench.yml  ci.yml  publish.yml
app/: brain.py  canon.py  cashflow.py  crypto.py  executor.py  main.py  models.py  peers.py  prove.py  storage.py
axiom/: README.md
axiom/spec/: formal_spec.md
axiom/whitepaper/: axiom_v1.tex
benchmarks/: run_bench.py
docker/: build_worlds.sh
docker/worlds/: Dockerfile.bayesian  Dockerfile.evolutionary  Dockerfile.formal  Dockerfile.multimodal  Dockerfile.neuro  Dockerfile.symbolic
examples/: sample.csv
integrations/dspy_cpo/: README.md  pyproject.toml
integrations/dspy_cpo/dspy_cpo/: __init__.py  client.py  module.py  predict.py
integrations/langchain_cpo/: README.md  pyproject.toml
integrations/langchain_cpo/langchain_cpo/: __init__.py  callback.py  chain.py  client.py
paper/: proof_protocol.tex
sandbox/: Dockerfile
scripts/: generate_node_key.py
sios/: __init__.py  __main__.py  cli.py  pipeline.py  store.py
sios/agents/: __init__.py  base.py
sios/agents/finance/: __init__.py  audit_agent.py
sios/agents/science/: __init__.py  deepsight_agent.py
sios/api/: __init__.py  routes.py
sios/cashflow/: __init__.py  email_sender.py  pdf.py
sios/connectors/: __init__.py  aws.py  stripe.py
sios/core/: __init__.py  ingestion.py  models.py
sios/discovery/: __init__.py  analyzers.py  engine.py  models.py
sios/discovery/scanners/: __init__.py  arxiv.py  base.py  pubmed.py  wikipedia.py
sios/proof_layer/: benchmark.py  models.py  routes.py  seed.py  trail.py
sios/swarm/: __init__.py  evolution.py  executor.py  models.py  node.py
sios/value_engine/: __init__.py  base.py  engine.py  trust.py
sios/value_engine/detectors/: __init__.py  cloud_waste.py  cost_anomalies.py  duplicate_payments.py  unused_subscriptions.py
static/: audit-viewer.html  benchmark.html  index.html  live-proof.html  proof-card.html  proof-gallery.html  proof-trail.html  results.html  vault.html  verify.html
tests/: test_api.py  test_ask.py  test_canon.py  test_cashflow.py  test_crypto.py  test_models.py  test_storage.py
