[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dspy-cpo"
version = "0.1.0"
description = "Proof Protocol adapter for DSPy — attach cryptographic execution proofs to any DSPy module or Predict call."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["dspy", "proof", "verifiable", "AI", "cryptography", "attestation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dspy = ["dspy-ai>=2.4"]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/haynbroit-alt/cpo"
Repository = "https://github.com/haynbroit-alt/cpo"

[tool.hatch.build.targets.wheel]
packages = ["dspy_cpo"]
